--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
     <div class="main-site-subheader menu disable-select">
         <div class="home">
             <a style="text-decoration: none;" href="/about">
-                <svg class="icon-home" width="18" height="19" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="icon-home" width="18" height="19" viewBox="0 0 25 25" fill="none">
                     <path d="M20.9777 21.6138V19.6138C20.9777 18.553 20.5563 17.5356 19.8061 16.7854C19.056 16.0353 18.0386 15.6138 16.9777 15.6138H8.97768C7.91682 15.6138 6.8994 16.0353 6.14926 16.7854C5.39911 17.5356 4.97768 18.553 4.97768 19.6138V21.6138"  stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M12.9777 11.6138C15.1868 11.6138 16.9777 9.82298 16.9777 7.61385C16.9777 5.40471 15.1868 3.61385 12.9777 3.61385C10.7685 3.61385 8.97768 5.40471 8.97768 7.61385C8.97768 9.82298 10.7685 11.6138 12.9777 11.6138Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
@@ -29,7 +29,7 @@
         </div>
         <div class="categories">
             <a style="text-decoration: none;" href="/tags">
-            <svg class="icon-category" width="18" height="19" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="icon-category" width="18" height="19" viewBox="0 0 24 25" fill="none">
                 <path d="M4 9.5H20"  stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M4 15.5H20"  stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M10 3.5L8 21.5"  stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -40,7 +40,7 @@
         </div>
         <div class="archives">
             <a style="text-decoration: none;" href="/archives">
-            <svg class="icon-archives" width="18" height="19" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="icon-archives" width="18" height="19" viewBox="0 0 24 25" fill="none">
                 <path d="M4 6.5H20" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M4 12.5H20" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M4 18.5H20" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -85,7 +85,7 @@
     {%- if page.permalink != "/" -%}
     <div class="main-site-subheader disable-select" id="scroll-head" onclick="window.location.assign('/');">
         <div class="back-icon">
-            <svg class="ripple" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+            <svg class="ripple" height="24" viewBox="0 0 24 24" width="24">
                 <path d="M0 0h24v24H0z" fill="none"/>
                 <path d="M21 11H6.83l3.58-3.59L9 6l-6 6 6 6 1.41-1.41L6.83 13H21z"/>
             </svg>
