--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="Jeong Hansol, C# Programmer" property="og:description">
@@ -25,8 +25,6 @@
 
     <link rel="icon" href="{{site.favicon}}" type="image/png" sizes="16x16"/>
     <link href="/assets/css/style.css" rel="stylesheet" media="all" class="default"/>
-
-    <link rel="alternate" type="application/rss+xml" href="{{ site.url }}/feed.xml">
 </head>
 
 <body>
